# native-python-caller

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  caller.pyx  quacker.py
.devcontainer/: devcontainer.json
cmake/: FindCython.cmake  callerConfig.cmake.in
host/: CMakeLists.txt  main.cpp
